--- a/ebookproject/src/main/resources/templates/layout/header.html
+++ b/ebookproject/src/main/resources/templates/layout/header.html
@@ -36,8 +36,8 @@
                 </label>
                 <section class="search-section">
                     <ol class="search-view">
-                        <li class="search-view-list" th:each="books : ${book}">
-                            <a th:href="@{|/detail/${books.bookNo}|}">책 제목 1번 예시</a>
+                        <li class="search-view-list">
+                            <a href="#">예시 리스트 1</a>
                         </li>
                     </ol>
                 </section>
