--- a/ebookproject/src/main/resources/static/css/public/header.css
+++ b/ebookproject/src/main/resources/static/css/public/header.css
@@ -64,6 +64,11 @@ button:hover {
     border-radius: 24px;
 }
 
+#h1-result{
+    margin: 0 20px 30px 35px;
+}
+
+
 .search-label > input{
     flex: 1;
     margin-right: 10px;
