--- a/ebookproject/src/main/resources/templates/searchbook.html
+++ b/ebookproject/src/main/resources/templates/searchbook.html
@@ -21,15 +21,18 @@
                 <section class="embla">
                     <div class="embla__viewport">
                         <div class="embla__container">
-                            <div class="embla__slide">
-                                <a href=""><img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/></a>
+                            <div class="embla__slide" th:each="randomBook: ${randomBookByGenre}">
+                                <a th:href="@{|/detail/${randomBook.bookNo}|}">
+                                    <img th:src="${randomBook.bookImage.fileUrl}" src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
+                                </a>
                             </div>
-                            <div class="embla__slide">
-                                <a href=""><img src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fimg-store.theqoo.net%2FCnnaAh.png&type=sc960_832" alt=""/></a>
-                            </div>
-                            <div class="embla__slide">
-                                <a href=""><img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA2MjBfMjQ1%2FMDAxNjg3MjE5NTMxMjg4.92I_FmsTHDQYxbm4aYeQZhaHfq6xCCyiF9m4jA-9D7og.ZUdWQ4-nzpa4bz9QYANLXhJxjGo__6txI7u3Xen_cpsg.JPEG.dbfla4232%2FIMG_5190.JPG&type=sc960_832"  alt=""/></a>
-                            </div>
+                            <!--                            <th:block th:href="@{/main(genre=만화)}">-->
+                            <!--                                <div class="embla__slide" th:each="book: ${bookRandomMap.value}">-->
+                            <!--                                    <a th:href="@{|/detail/${book.no}|}">-->
+                            <!--                                        <img th:src="${book.bookImage.fileUrl}" src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>-->
+                            <!--                                    </a>-->
+                            <!--                                </div>-->
+                            <!--                            </th:block>-->
                         </div>
 
                         <div class="embla__controls">
@@ -53,7 +56,7 @@
             </div>
         </article>
         <section id="search-result">
-            <h1 th:text="|${searchResult}을(를) 검색한 결과|">검색 결과</h1>
+            <h1 id="h1-result" th:text="|${searchResult}을(를) 검색한 결과|">검색 결과</h1>
             <ul id="search-info-section">
                 <li th:each="books : ${book}" class="search-info-image">
                     <a th:href="@{|/detail/${books.bookNo}|}">
