--- a/ebookproject/src/main/resources/templates/user/register.html
+++ b/ebookproject/src/main/resources/templates/user/register.html
@@ -103,7 +103,7 @@
             <section class="form-section">
                 <label>
                     <span>프로필 사진</span>
-                    <input type="file" name="profileImage.file" th:value="${profileImage}" accept="image/jpeg,image/png">
+                    <input type="file" name="userProfileImage" accept="image/jpeg,image/png">
                 </label>
             </section>
             
