--- a/ebookproject/src/main/resources/templates/detail.html
+++ b/ebookproject/src/main/resources/templates/detail.html
@@ -13,6 +13,7 @@
     <link href="../static/css/public/public.css" rel="stylesheet" th:href="@{/css/public/public.css}">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/d19fdaba43.js"></script>
     <script src="../static/js/detail.js" th:src="@{/js/detail.js}" defer></script>
+    <script src="../static/js/user/like.js" th:src="@{/js/user/like.js}" defer></script>
 </head>
 <body>
 <main layout:fragment="main">
