--- a/ebookproject/src/main/resources/templates/user/findId.html
+++ b/ebookproject/src/main/resources/templates/user/findId.html
@@ -18,7 +18,7 @@
         <div class="find-div">
             <label>
                 <input id="id-input-section" type="text" placeholder="이름입력" name="userName">
-                <input id="email-input-section find-id-email" type="text" placeholder="이메일작성" name="useremail">
+                <input id="email-input-section find-id-email" type="text" placeholder="이메일작성" name="userEmail">
             </label>
             <div>
                 <span class="find-id-print-section" th:if="${id == null}">아이디가 존재하지 않습니다</span>
