buybook and change like controller

--- a/ebookproject/src/main/resources/templates/user/mypage.html
+++ b/ebookproject/src/main/resources/templates/user/mypage.html
@@ -103,11 +103,11 @@
                                 </div>
                                 <div>
                                     <span class="buy-list-author">저자 : 신용권, 임경균</span>
-                                    <span class="buy-list-publisher">출판 미디어 2024.04.01</span>
+                                    <span class="buy-list-publisher">출판 미디어</span>
                                 </div>
                             </div>
                             <div>
-                                <span class="buy-list-category">책 제목</span>
+                                <span class="buy-list-category">카테고리 제목ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</span>
                                 <span class="buy-list-date">작성 날짜</span>
                             </div>
                         </a>
