--- a/ebookproject/src/main/resources/static/css/main.css
+++ b/ebookproject/src/main/resources/static/css/main.css
@@ -53,11 +53,14 @@ main{
     display: inline-block;
     width: 100%;
     height: 100%;
-    background-color: rgba(170,170,170,0.5);
+    background-color: rgba(170,170,170,0.2);
+    border-radius: 10px;
 }
 .embla__slide img{
     width: 100%;
     height: 100%;
+}
+#main-image{
     object-fit: contain;
 }
 
@@ -166,7 +169,7 @@ main{
 .sub-img-box{
     flex: 0 0 250px;
     height: 350px;
-    margin-right: 25px;
+    margin-right: 10px;
     border-radius: 10px;
 }
 .sub-img-box:last-child{
