--- a/ebookproject/src/main/resources/static/css/public/header.css
+++ b/ebookproject/src/main/resources/static/css/public/header.css
@@ -21,30 +21,23 @@ header > form {
 .img{
     width: 80px;
     height: 50px;
-    margin-right: 20px;
+    margin-right: 80px;
 }
 
 #e-book-category-div > .genre {
-    background-color: white;
+    font-weight: bold;
     color: black;
     text-align: center;
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 80px;
     font-size: 15px;
-    padding: 10px 0;
-    margin-right: 10px;
-    text-decoration: none;
+    padding: 2px 0;
+    margin: 0 20px;
     &:hover{
-        background-color: #eeeded;
+        border-bottom: 1px solid coral;
+        color: coral;
     }
 }
 #e-book-category-div > button:nth-child(2){
     margin-right: 15px;
-}
-
-button:hover {
-    opacity: 0.7;
 }
 
 #header-user-div {
