--- a/ebookproject/src/main/resources/static/css/public/public.css
+++ b/ebookproject/src/main/resources/static/css/public/public.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'Katuri';
-    src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_13@1.0/Katuri.woff') format('woff');
-    font-weight: normal;
+    font-family: 'MICEGothic Bold';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2') format('woff2');
+    font-weight: 700;
     font-style: normal;
 }
 
 *{
-    font-family: 'Katuri';
+    font-family: 'MICEGothic Bold';
     padding: 0;
     margin: 0;
     box-sizing: border-box;
