--- a/ebookproject/src/main/resources/templates/main.html
+++ b/ebookproject/src/main/resources/templates/main.html
@@ -7,7 +7,7 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>View</title>
+    <title>Main</title>
     <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
     <link rel="stylesheet" href="../static/css/public/public.css" th:href="@{/css/public/public.css}">
     <script src="https://kit.fontawesome.com/d19fdaba43.js" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
                         <div class="embla__container">
                             <div class="embla__slide" th:each="randomBook: ${randomBookByGenre}">
                                 <a th:href="@{|/detail/${randomBook.bookNo}/ASC|}">
-                                    <img th:src="${randomBook.bookImage.fileUrl}" src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
+                                    <img id="main-image" th:src="${randomBook.bookImage.fileUrl}" src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
                                 </a>
                             </div>
                             <!--                            <th:block th:href="@{/main(genre=만화)}">-->
