--- a/ebookproject/src/main/resources/static/css/main.css
+++ b/ebookproject/src/main/resources/static/css/main.css
@@ -6,7 +6,6 @@ main{
 .view-container{
     width: 100%;
     height: 700px;
-    top: 0;
 }
 
 .view{
@@ -15,13 +14,6 @@ main{
     height: 100%;
     margin: 0 auto;
     justify-content: center;
-}
-
-.view .embla img{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    /*object-fit: contain;*/
 }
 
 /*************************************/
@@ -35,6 +27,7 @@ main{
 
 .embla__viewport {
     height: 100%;
+    border-radius: 30px;
     overflow: hidden;
 }
 .embla__container {
@@ -46,22 +39,24 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 0 0 100%;
-    border-radius: 10px;
+    flex: 0 0 50%;
+    border-radius: 50px;
+    margin: 0 2px;
 }
 .embla__slide a{
     display: inline-block;
     width: 100%;
     height: 100%;
     background-color: rgba(170,170,170,0.2);
-    border-radius: 10px;
+    border-radius: 50px;
 }
 .embla__slide img{
+    border-radius: 50px;
     width: 100%;
     height: 100%;
 }
 #main-image{
-    object-fit: contain;
+    object-fit: revert;
 }
 
 .embla__controls {
@@ -77,18 +72,20 @@ main{
 .view .embla__button {
     -webkit-appearance: none;
     appearance: none;
-    background-color: unset;
+    background-color: black;
     text-decoration: none;
     cursor: pointer;
     border: 0;
     margin: 0;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     z-index: 1;
     color: inherit;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 50px;
+    opacity: 0.7;
 }
 .view .embla__button:disabled {
     display: none;
@@ -96,6 +93,8 @@ main{
 .view .embla__button__svg {
     width: 100%;
     height: 100%;
+    color: white;
+    padding: 15px;
 }
 .view .embla__button--prev{
     position: relative;
@@ -150,7 +149,7 @@ main{
 /*************************************************/
 
 #sub-section{
-    margin: 100px 0;
+    margin: 50px 0 100px 0;
     width: 100%;
     overflow: hidden;
 }
